<resources>
    <string name="app_name">Antimatter Live Wallpaper</string>
    <string name="title_activity_planet_settings">Settings</string>
    <string name="pref_title_type1_self">Matter towards matter</string>
    <string name="pref_title_type1_others">Matter towards antimatter</string>
    <string name="pref_title_type2_self">Antimatter towards antimatter</string>
    <string name="pref_title_type2_others">Antimatter towards matter</string>
    <string name="pref_title_total1">Number of matter particles</string>
    <string name="pref_title_total2">Number of antimatter particles</string>
    <string name="pref_title_radius">Accuracy</string>
    <string name="pref_title_scale_factor">Particle size</string>
    <string name="pref_title_offset">Blur</string>
    <string name="pref_title_trail">Trail</string>
    <string name="pref_title_glow">Brightness</string>
    <string name="pref_title_fps">Show FPS</string>
    <string name="pref_title_horizon">Force limitation</string>
    <string name="pref_title_gauss">Force Equilibrium</string>
    <string name="pref_title_attenuation">Friction</string>
    <string name="pref_title_force">Force</string>
    <string name="pref_title_gravity">Distance multiplier</string>
    <string name="pref_title_predefined">Load predefined settings</string>
    <string name="pref_title_formula">Force law:</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_cold">Cold color:</string>
    <string name="pref_title_warm">Warm color:</string>
    <string name="pref_title_render">Rendering:</string>
    <string name="pref_title_motion">Motion tracking</string>
    <string name="pref_title_bounce">Bounce</string>
    <string name="pref_title_solid">Solid</string>
    <string name="pref_title_graphics">Graphics</string>
    <string name="pref_title_physics">Physics</string>
    <string name="pref_title_speed">Speed</string>
    <string name="wallpaper_description">Watch thousands of particles explode and attract each other</string>
    <string name="banner_ad_unit_id">ca-app-pub-4208802804313613/7496816308</string>
    <string name="ad_app_id">ca-app-pub-4208802804313613~4543349906</string>
    <string name="pref_key_total1">com.prozium.particlesfree.total1</string>
    <string name="pref_key_total2">com.prozium.particlesfree.total2</string>
    <string name="pref_key_radius">com.prozium.particlesfree.radius</string>
    <string name="pref_key_scale_factor">com.prozium.particlesfree.scale_factor</string>
    <string name="pref_key_offset">com.prozium.particlesfree.offset</string>
    <string name="pref_key_trail">com.prozium.particlesfree.trail</string>
    <string name="pref_key_glow">com.prozium.particlesfree.glow</string>
    <string name="pref_key_cold">com.prozium.particlesfree.cold2</string>
    <string name="pref_key_warm">com.prozium.particlesfree.warm2</string>
    <string name="pref_key_attenuation">com.prozium.particlesfree.attenuation</string>
    <string name="pref_key_force_self1">com.prozium.particlesfree.force_self1</string>
    <string name="pref_key_gravity_self1">com.prozium.particlesfree.gravity_self1</string>
    <string name="pref_key_horizon_self1">com.prozium.particlesfree.horizon_self1</string>
    <string name="pref_key_formula_self1">com.prozium.particlesfree.formula_self1</string>
    <string name="pref_key_gauss_self1">com.prozium.particlesfree.gauss_self1</string>
    <string name="pref_key_force_others1">com.prozium.particlesfree.force_others1</string>
    <string name="pref_key_gravity_others1">com.prozium.particlesfree.gravity_others1</string>
    <string name="pref_key_horizon_others1">com.prozium.particlesfree.horizon_others1</string>
    <string name="pref_key_formula_others1">com.prozium.particlesfree.formula_others1</string>
    <string name="pref_key_gauss_others1">com.prozium.particlesfree.gauss_others1</string>
    <string name="pref_key_force_others2">com.prozium.particlesfree.force_others2</string>
    <string name="pref_key_gravity_others2">com.prozium.particlesfree.gravity_others2</string>
    <string name="pref_key_horizon_others2">com.prozium.particlesfree.horizon_others2</string>
    <string name="pref_key_formula_others2">com.prozium.particlesfree.formula_others2</string>
    <string name="pref_key_gauss_others2">com.prozium.particlesfree.gauss_others2</string>
    <string name="pref_key_force_self2">com.prozium.particlesfree.force_self2</string>
    <string name="pref_key_gravity_self2">com.prozium.particlesfree.gravity_self2</string>
    <string name="pref_key_horizon_self2">com.prozium.particlesfree.horizon_self2</string>
    <string name="pref_key_formula_self2">com.prozium.particlesfree.formula_self2</string>
    <string name="pref_key_gauss_self2">com.prozium.particlesfree.gauss_self2</string>
    <string name="pref_key_fps">com.prozium.particlesfree.fps</string>
    <string name="pref_key_predefined">com.prozium.particlesfree.predefined</string>
    <string name="pref_key_render">com.prozium.particlesfree.render</string>
    <string name="pref_key_motion">com.prozium.particlesfree.motion</string>
    <string name="pref_key_bounce">com.prozium.particlesfree.bounce</string>
    <string name="pref_key_solid">com.prozium.particlesfree.solid</string>
    <string name="pref_key_speed">com.prozium.particlesfree.speed</string>
    <string name="pref_message_about">
        <p>To set the application as a live wallpaper exit the app then go to your phone <i>Settings/Display/Wallpaper/Live Wallpapers</i> and
        select <i>Antimatter Live Wallpaper</i>.</p>
        <p>To choose one of the existing predefined particle configurations use <i>Load predefined settings</i>.
         You can interact with the particles by enabling <i>Motion Tracking</i>, then tilt your
        device and watch the particles fall towards the ground.</p>
    </string>
</resources>
